<?xml version="1.0" encoding="utf-8"?>
  <!--
  Copyright 2013 Ryan Shaw (ryanfx1@gmail.com)

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
  -->
<resources>
    <string name="app_name">Garage Opener</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="toggle_garage">Toggle Garage</string>
    <string name="close_garage">Close Garage</string>
    <string name="status">Get Status</string>
    <string name="title">Garage Opener</string>
    <string name="closed">Closed</string>
    <string name="open">Open</string>
    <string name="ellipses">...</string>
    <string name="door_is">Door is:</string>
</resources>
